# Nescee

./: .gitattributes  .gitignore  README.md  dp-hvc-release-v1.0.8-0-g32708cb_trimmed.hsqs
R16/: CMakeLists.txt  allwinner_r16.cpp  allwinner_r16.h  ccu.cpp  ccu.h  cpucfg.h  dma.cpp  dma.h  highspeedtimer.cpp  memmap.cpp  pwm.cpp  pwm.h
R16/module/: audio_codec.cpp  audio_codec.h  ccu.cpp  cpucfg.cpp  cpucfg.h  highspeedtimer.h  rtc.cpp  rtc.h  sram.cpp  sram.h  timer.cpp  timer.h
